removed BLEU replaced with longest common subsequence method

--- a/notebooks/plots-doc-checklist.ipynb
+++ b/notebooks/plots-doc-checklist.ipynb
@@ -48,9 +48,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-01 22:43:15 - INFO - Creating global visualization for 2 checks\n",
-      "2025-08-01 22:43:15 - INFO - Creating plot for prompt: prompt.1...\n",
-      "2025-08-01 22:43:15 - INFO - Creating plot for prompt: prompt.2...\n"
+      "2025-08-03 18:49:50 - INFO - Creating global visualization for 2 checks\n",
+      "2025-08-03 18:49:50 - INFO - Creating plot for prompt: prompt.1...\n",
+      "2025-08-03 18:49:50 - INFO - Creating plot for prompt: prompt.2...\n"
      ]
     },
     {
@@ -63,8 +63,8 @@
         {
          "error_y": {
           "array": [
-           0.006457923631997007,
-           0.29016892935280253
+           0.020424941609082224,
+           0.29895818367998644
           ],
           "color": "grey",
           "thickness": 1,
@@ -74,8 +74,8 @@
          },
          "hoverinfo": "text",
          "hovertext": [
-          "Check: section-order-alt<br>Average Score: 0.985<br>Prompt: prompt.1<br>Num Points: 5",
-          "Check: section-order<br>Average Score: 0.449<br>Prompt: prompt.1<br>Num Points: 5"
+          "Check: section-order-alt<br>Average Score: 0.962<br>Prompt: prompt.1<br>Num Points: 5",
+          "Check: section-order<br>Average Score: 0.472<br>Prompt: prompt.1<br>Num Points: 5"
          ],
          "marker": {
           "color": "rgb(228,26,28)"
@@ -89,8 +89,8 @@
           0.8333333333333334
          ],
          "y": [
-          0.9851276165610685,
-          0.4486474070946375
+          0.9622854735900697,
+          0.47171468500173186
          ]
         },
         {
@@ -120,26 +120,26 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          -0.17618547206625979,
-          -0.21241747025339597,
-          -0.13494734588151566,
-          -0.15754195929337297,
-          -0.16120827785153424,
-          0.8792031478862008,
-          0.7510453850004772,
-          0.8924070008644867,
-          0.8880912341377319,
-          0.7722382552287901
+          -0.21548866643492826,
+          -0.13569351646098038,
+          -0.15881290170741796,
+          -0.12129381852367416,
+          -0.22142253209048907,
+          0.7700938066316304,
+          0.8798874895534128,
+          0.8101825514018869,
+          0.8420221218568971,
+          0.8277975267050548
          ],
          "y": {
-          "bdata": "SZIkCa6D7z+qqqpyCKXvPwAAAL44zu8/2ImdsBhU7z900UXXy1PvP5qZmZmZmeE/u7u7K9ms2j8AAACA8n3eP5qZmZmZmek/AAAAAAAAAAA=",
+          "bdata": "11prrbXW7j+qqqqqqqruP6iffvrpp+8/m0ScDhPW7T/iuNwl2ffuP8CJvwWc+OM/G/PzsW4O2z+m8mABAmDgP5qZmZmZmek/AAAAAAAAAAA=",
           "dtype": "f8"
          }
         },
         {
          "error_y": {
           "array": [
-           0.08108940746488141
+           0.09566556156850156
           ],
           "color": "grey",
           "thickness": 1,
@@ -149,7 +149,7 @@
          },
          "hoverinfo": "text",
          "hovertext": [
-          "Check: section-order<br>Average Score: 0.608<br>Prompt: prompt.2<br>Num Points: 5"
+          "Check: section-order<br>Average Score: 0.620<br>Prompt: prompt.2<br>Num Points: 5"
          ],
          "marker": {
           "color": "rgb(55,126,184)"
@@ -162,7 +162,7 @@
           1.1666666666666667
          ],
          "y": [
-          0.6083719193032293
+          0.6200599884676963
          ]
         },
         {
@@ -187,14 +187,14 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          1.166145214390227,
-          1.1309309558482497,
-          1.2004574572806004,
-          1.1791927585282902,
-          1.2177867062817036
+          1.1821276213368526,
+          1.1987951651282411,
+          1.1885233294728246,
+          1.1853846716152798,
+          1.1707187261101952
          ],
          "y": {
-          "bdata": "ERERkQw74z9mZmYe9d7lP2ZmZhannuU/MzMzMzMz4z/WvmHtG9bePw==",
+          "bdata": "MzMzMzMz4z8WgoLhvw/mP6KF6vpzVOc/MzMzMzMz4z/WvmHtG9bePw==",
           "dtype": "f8"
          }
         }
@@ -991,7 +991,7 @@
          "font": {
           "size": 24
          },
-         "text": "Benchmarking of \"Doc-Checklist\"<br><span style=\"font-size: 0.5em; color: #888;\">Comparing values with semantic similarity</span><br><span style=\"font-size: 0.5em; color: #888;\">Model: gpt-4o-2024-08-06</span>",
+         "text": "Benchmarking of \"Doc-Checklist\"<br><span style=\"font-size: 0.5em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.5em; color: #888;\">Model: gpt-4o-2024-08-06</span>",
          "x": 0.5,
          "y": 0.95
         },
@@ -1033,7 +1033,7 @@
    "source": [
     "fig, df_data = checklist_visualization(\n",
     "    \"doc-checklist\",\n",
-    "    metric=\"semantic_similarity\",\n",
+    "    metric=\"longest_common_subsequence\",  # \"semantic_similarity\", \"perfect_match\"\n",
     "    model=MODEL,\n",
     "    aggregation_level=0\n",
     ")\n",
@@ -1049,8 +1049,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-01 22:43:24 - INFO - Creating plot (prompt.1, semantic_similarity), plotting score for section-order-alt...\n",
-      "2025-08-01 22:43:24 - INFO - Plotting data: 10 rows\n"
+      "2025-08-03 18:49:59 - INFO - Creating plot (prompt.1, longest_common_subsequence), plotting score for section-order-alt...\n",
+      "2025-08-03 18:49:59 - INFO - Plotting data: 10 rows\n"
      ]
     },
     {
@@ -1087,26 +1087,26 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          0.03290113776281615,
-          1.0354733684563635,
-          0.025646076279044996,
-          1.0562882322997875,
-          -0.00802970364957361,
-          0.9919014499276183,
-          -0.025020960840141146,
-          0.947301085414694,
-          -0.07419829661513164,
-          0.9866699861148107
+          -0.02135796853570457,
+          1.0420188012639615,
+          -0.0007601756929374985,
+          0.9779470512405911,
+          0.020747261073628964,
+          1.0078005893369106,
+          0.02215355097822122,
+          1.0087095802613175,
+          0.0035334831659604954,
+          0.987411169899283
          ],
          "y": {
-          "bdata": "kiRJElwH7z8AAAAAAADwP1VVVeUQSu8/AAAAAAAA8D8AAAB8cZzvPwAAAAAAAPA/sRM7YTGo7j8AAAAAAADwP+mii66Xp+4/AAAAAAAA8D8=",
+          "bdata": "rrXWWmut7T8AAAAAAADwP1VVVVVVVe0/AAAAAAAA8D9QP/3000/vPwAAAAAAAPA/Nok4HSas6z8AAAAAAADwP8NxuUuy7+0/AAAAAAAA8D8=",
           "dtype": "f8"
          }
         },
         {
          "error_y": {
           "array": {
-           "bdata": "AAAAAAAAAACuuMqsn3OKPw==",
+           "bdata": "AAAAAAAAAAC2U++gRuqkPw==",
            "dtype": "f8"
           },
           "color": "grey",
@@ -1117,7 +1117,7 @@
          },
          "hovertext": [
           "Field: missing_sections<br>1.0: 1.000<br>Prompt: prompt.1",
-          "Field: sections_as_in_manuscript<br>0.9702552331221369: 0.970<br>Prompt: prompt.1"
+          "Field: sections_as_in_manuscript<br>0.9245709471801394: 0.925<br>Prompt: prompt.1"
          ],
          "marker": {
           "color": "rgb(228,26,28)"
@@ -1131,7 +1131,7 @@
           0
          ],
          "y": {
-          "bdata": "AAAAAAAA8D+zCeGzVAzvPw==",
+          "bdata": "AAAAAAAA8D/dDZ/PFZbtPw==",
           "dtype": "f8"
          }
         }
@@ -1926,7 +1926,7 @@
          }
         },
         "title": {
-         "text": "score for section-order-alt (n=5)<br><span style=\"font-size: 0.8em; color: #888;\">Comparing values with semantic similarity</span><br><span style=\"font-size: 0.8em; color: #888;\">Model: gpt-4o-2024-08-06</span>"
+         "text": "score for section-order-alt (n=5)<br><span style=\"font-size: 0.8em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.8em; color: #888;\">Model: gpt-4o-2024-08-06</span>"
         },
         "width": 800,
         "xaxis": {
@@ -1963,7 +1963,7 @@
     "fig, df_data, df_metadata = check_visualization(\n",
     "    \"doc-checklist\",\n",
     "    \"section-order-alt\",\n",
-    "    metric=\"semantic_similarity\",\n",
+    "    metric=\"longest_common_subsequence\",\n",
     "    score=\"score\",\n",
     "    model=MODEL,\n",
     "    aggregation_level=0\n",
@@ -1980,32 +1980,92 @@
      "data": {
       "text/html": [
        "\n",
-       "            <h3>Paper: EMM-2025-21532 - Element: EMM-2025-21532/match_0_0 with score 0.979</h3>\n",
+       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.932</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.958</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.865</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
        "            \n",
-       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.979</h3>\n",
+       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.932</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.958</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.865</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
        "            \n",
-       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.985</h3>\n",
+       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.932</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.970</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.865</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: EMBOJ-2024-119734R - Element: EMBOJ-2024-119734R/match_0_0 with score 0.958</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.917</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: EMBOJ-2024-119734R - Element: EMBOJ-2024-119734R/match_0_0 with score 0.958</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.917</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: EMBOJ-2024-119734R - Element: EMBOJ-2024-119734R/match_0_0 with score 0.958</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.917</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.964</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.927</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.964</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.927</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.964</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.927</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
@@ -2020,6 +2080,7 @@
     }
    ],
    "source": [
+    "from IPython.display import HTML\n",
     "\n",
     "html, worst_items, fields_data = check_report(\n",
     "    \"doc-checklist\",\n",
@@ -2027,7 +2088,7 @@
     "    prompt=\"prompt.1\",\n",
     "    # search_id=\"2009.312\",\n",
     "    model=MODEL,\n",
-    "    metric=\"semantic_similarity\",\n",
+    "    metric=\"longest_common_subsequence\",\n",
     "    score=\"score\",\n",
     "    aggregation_level=1\n",
     ")\n",
