--- a/notebooks/plots-doc-checklist.ipynb
+++ b/notebooks/plots-doc-checklist.ipynb
@@ -24,7 +24,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-04 00:12:39 - INFO - 📱 CPU device selected\n",
+      "2025-08-04 00:12:39 - INFO - ✅ Anthropic API provider configured\n"
+     ]
+    }
+   ],
    "source": [
     "# import visualize from tools\n",
     "from soda_mmqc.scripts.visualize import *"
@@ -36,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL = \"gpt-4o-2024-08-06\" #\"gpt-4o-2024-08-06\"  #o3-mini-2025-01-31  # o4-mini-2025-04-16"
+    "MODEL = \"claude-3-5-sonnet-20241022\"  # \"gpt-4o-2024-08-06\" #\"gpt-4o-2024-08-06\"  #o3-mini-2025-01-31  # o4-mini-2025-04-16 # claude-3-5-sonnet-20241022"
    ]
   },
   {
@@ -48,9 +57,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-03 18:49:50 - INFO - Creating global visualization for 2 checks\n",
-      "2025-08-03 18:49:50 - INFO - Creating plot for prompt: prompt.1...\n",
-      "2025-08-03 18:49:50 - INFO - Creating plot for prompt: prompt.2...\n"
+      "2025-08-04 00:12:53 - INFO - Creating global visualization for 2 checks\n",
+      "2025-08-04 00:12:53 - INFO - Creating plot for prompt: prompt.1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-04 00:12:53 - INFO - Creating plot for prompt: prompt.2...\n"
      ]
     },
     {
@@ -63,8 +78,8 @@
         {
          "error_y": {
           "array": [
-           0.020424941609082224,
-           0.29895818367998644
+           0.25898232448868314,
+           0.13845283683610765
           ],
           "color": "grey",
           "thickness": 1,
@@ -74,8 +89,8 @@
          },
          "hoverinfo": "text",
          "hovertext": [
-          "Check: section-order-alt<br>Average Score: 0.962<br>Prompt: prompt.1<br>Num Points: 5",
-          "Check: section-order<br>Average Score: 0.472<br>Prompt: prompt.1<br>Num Points: 5"
+          "Check: section-order-alt<br>Average Score: 0.838<br>Prompt: prompt.1<br>Num Points: 5",
+          "Check: section-order<br>Average Score: 0.569<br>Prompt: prompt.1<br>Num Points: 5"
          ],
          "marker": {
           "color": "rgb(228,26,28)"
@@ -89,8 +104,8 @@
           0.8333333333333334
          ],
          "y": [
-          0.9622854735900697,
-          0.47171468500173186
+          0.8384949727691662,
+          0.568711001642036
          ]
         },
         {
@@ -120,26 +135,26 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          -0.21548866643492826,
-          -0.13569351646098038,
-          -0.15881290170741796,
-          -0.12129381852367416,
-          -0.22142253209048907,
-          0.7700938066316304,
-          0.8798874895534128,
-          0.8101825514018869,
-          0.8420221218568971,
-          0.8277975267050548
+          -0.20542850792780792,
+          -0.12015295526150827,
+          -0.1480841292729239,
+          -0.18863669637771502,
+          -0.13552913359475138,
+          0.8385773778983664,
+          0.8017113437612501,
+          0.7950505531103066,
+          0.8196395827958547,
+          0.8384456320402669
          ],
          "y": {
-          "bdata": "11prrbXW7j+qqqqqqqruP6iffvrpp+8/m0ScDhPW7T/iuNwl2ffuP8CJvwWc+OM/G/PzsW4O2z+m8mABAmDgP5qZmZmZmek/AAAAAAAAAAA=",
+          "bdata": "IO2P9kf76z8AAAAAAADwP0U2IhuRjdg/IhuRjchG7j+gf/7555/vPzMzMzMzM+M/DMMwDMMw5D+HRWHfM8vnP2DxFV/xFd8/iIiIiIiI2D8=",
           "dtype": "f8"
          }
         },
         {
          "error_y": {
           "array": [
-           0.09566556156850156
+           0.09305337728297215
           ],
           "color": "grey",
           "thickness": 1,
@@ -149,7 +164,7 @@
          },
          "hoverinfo": "text",
          "hovertext": [
-          "Check: section-order<br>Average Score: 0.620<br>Prompt: prompt.2<br>Num Points: 5"
+          "Check: section-order<br>Average Score: 0.543<br>Prompt: prompt.2<br>Num Points: 5"
          ],
          "marker": {
           "color": "rgb(55,126,184)"
@@ -162,7 +177,7 @@
           1.1666666666666667
          ],
          "y": [
-          0.6200599884676963
+          0.5427777485105473
          ]
         },
         {
@@ -187,14 +202,14 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          1.1821276213368526,
-          1.1987951651282411,
-          1.1885233294728246,
-          1.1853846716152798,
-          1.1707187261101952
+          1.1408558930658437,
+          1.174200115885977,
+          1.1314754959686903,
+          1.1915910133710006,
+          1.1360736836705059
          ],
          "y": {
-          "bdata": "MzMzMzMz4z8WgoLhvw/mP6KF6vpzVOc/MzMzMzMz4z/WvmHtG9bePw==",
+          "bdata": "mpmZmZmZ4T9zcihyzU7gP3XxKCXO/N0/YPEVX/EV3z9mZmZmZmbmPw==",
           "dtype": "f8"
          }
         }
@@ -991,7 +1006,7 @@
          "font": {
           "size": 24
          },
-         "text": "Benchmarking of \"Doc-Checklist\"<br><span style=\"font-size: 0.5em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.5em; color: #888;\">Model: gpt-4o-2024-08-06</span>",
+         "text": "Benchmarking of \"Doc-Checklist\"<br><span style=\"font-size: 0.5em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.5em; color: #888;\">Model: claude-3-5-sonnet-20241022</span>",
          "x": 0.5,
          "y": 0.95
         },
@@ -1042,15 +1057,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-03 18:49:59 - INFO - Creating plot (prompt.1, longest_common_subsequence), plotting score for section-order-alt...\n",
-      "2025-08-03 18:49:59 - INFO - Plotting data: 10 rows\n"
+      "2025-08-04 00:13:06 - INFO - Creating plot (prompt.1, longest_common_subsequence), plotting score for section-order-alt...\n",
+      "2025-08-04 00:13:06 - INFO - Plotting data: 10 rows\n"
      ]
     },
     {
@@ -1087,26 +1102,26 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          -0.02135796853570457,
-          1.0420188012639615,
-          -0.0007601756929374985,
-          0.9779470512405911,
-          0.020747261073628964,
-          1.0078005893369106,
-          0.02215355097822122,
-          1.0087095802613175,
-          0.0035334831659604954,
-          0.987411169899283
+          -0.012504694264156797,
+          1.0669807050421478,
+          -0.028354545137220882,
+          1.025622522275702,
+          0.07850352960932892,
+          0.990029830428773,
+          0.07134415925743126,
+          1.0343537217773062,
+          0.005239617493149207,
+          0.9849845084467813
          ],
          "y": {
-          "bdata": "rrXWWmut7T8AAAAAAADwP1VVVVVVVe0/AAAAAAAA8D9QP/3000/vPwAAAAAAAPA/Nok4HSas6z8AAAAAAADwP8NxuUuy7+0/AAAAAAAA8D8=",
+          "bdata": "QNof7Y/27z8AAAAAAADoPwAAAAAAAPA/AAAAAAAA8D9FNiIbkY3oPwAAAAAAAAAARTYiG5GN7D8AAAAAAADwP0D//PPPP+8/AAAAAAAA8D8=",
           "dtype": "f8"
          }
         },
         {
          "error_y": {
           "array": {
-           "bdata": "AAAAAAAAAAC2U++gRuqkPw==",
+           "bdata": "qkxY6Hq22z+W8vhewX25Pw==",
            "dtype": "f8"
           },
           "color": "grey",
@@ -1116,8 +1131,8 @@
           "width": 3
          },
          "hovertext": [
-          "Field: missing_sections<br>1.0: 1.000<br>Prompt: prompt.1",
-          "Field: sections_as_in_manuscript<br>0.9245709471801394: 0.925<br>Prompt: prompt.1"
+          "Field: missing_sections<br>0.75: 0.750<br>Prompt: prompt.1",
+          "Field: sections_as_in_manuscript<br>0.9269899455383326: 0.927<br>Prompt: prompt.1"
          ],
          "marker": {
           "color": "rgb(228,26,28)"
@@ -1131,7 +1146,7 @@
           0
          ],
          "y": {
-          "bdata": "AAAAAAAA8D/dDZ/PFZbtPw==",
+          "bdata": "AAAAAAAA6D/O2nnR5qntPw==",
           "dtype": "f8"
          }
         }
@@ -1926,7 +1941,7 @@
          }
         },
         "title": {
-         "text": "score for section-order-alt (n=5)<br><span style=\"font-size: 0.8em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.8em; color: #888;\">Model: gpt-4o-2024-08-06</span>"
+         "text": "score for section-order-alt (n=5)<br><span style=\"font-size: 0.8em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.8em; color: #888;\">Model: claude-3-5-sonnet-20241022</span>"
         },
         "width": 800,
         "xaxis": {
@@ -1980,92 +1995,32 @@
      "data": {
       "text/html": [
        "\n",
-       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.932</h3>\n",
+       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.384</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.865</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.767</td><td>0.846</td></tr><tr><td>missing_sections</td><td>0.000</td><td>0.000</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
        "            \n",
-       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.932</h3>\n",
+       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.384</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.865</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.767</td><td>0.846</td></tr><tr><td>missing_sections</td><td>0.000</td><td>0.000</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
        "            \n",
-       "            <h3>Paper: EMM-2025-21341 - Element: EMM-2025-21341/match_0_0 with score 0.932</h3>\n",
+       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.384</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.865</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
-       "            </table>\n",
-       "            \n",
-       "            </div>\n",
-       "            \n",
-       "            <h3>Paper: EMBOJ-2024-119734R - Element: EMBOJ-2024-119734R/match_0_0 with score 0.958</h3>\n",
-       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
-       "                \n",
-       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
-       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.917</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
-       "            </table>\n",
-       "            \n",
-       "            </div>\n",
-       "            \n",
-       "            <h3>Paper: EMBOJ-2024-119734R - Element: EMBOJ-2024-119734R/match_0_0 with score 0.958</h3>\n",
-       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
-       "                \n",
-       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
-       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.917</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
-       "            </table>\n",
-       "            \n",
-       "            </div>\n",
-       "            \n",
-       "            <h3>Paper: EMBOJ-2024-119734R - Element: EMBOJ-2024-119734R/match_0_0 with score 0.958</h3>\n",
-       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
-       "                \n",
-       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
-       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.917</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
-       "            </table>\n",
-       "            \n",
-       "            </div>\n",
-       "            \n",
-       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.964</h3>\n",
-       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
-       "                \n",
-       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
-       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.927</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
-       "            </table>\n",
-       "            \n",
-       "            </div>\n",
-       "            \n",
-       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.964</h3>\n",
-       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
-       "                \n",
-       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
-       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.927</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
-       "            </table>\n",
-       "            \n",
-       "            </div>\n",
-       "            \n",
-       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.964</h3>\n",
-       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
-       "                \n",
-       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
-       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.927</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.767</td><td>0.846</td></tr><tr><td>missing_sections</td><td>0.000</td><td>0.000</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
