--- a/notebooks/plots-doc-checklist.ipynb
+++ b/notebooks/plots-doc-checklist.ipynb
@@ -29,8 +29,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-04 00:12:39 - INFO - 📱 CPU device selected\n",
-      "2025-08-04 00:12:39 - INFO - ✅ Anthropic API provider configured\n"
+      "2025-08-04 10:40:23 - INFO - 📱 CPU device selected\n",
+      "2025-08-04 10:40:23 - INFO - ✅ Anthropic API provider configured\n"
      ]
     }
    ],
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL = \"claude-3-5-sonnet-20241022\"  # \"gpt-4o-2024-08-06\" #\"gpt-4o-2024-08-06\"  #o3-mini-2025-01-31  # o4-mini-2025-04-16 # claude-3-5-sonnet-20241022"
+    "MODEL = \"claude-sonnet-4-20250514\"  # \"claude-3-5-sonnet-20241022\"  # \"gpt-4o-2024-08-06\" #\"gpt-4o-2024-08-06\"  #o3-mini-2025-01-31  # o4-mini-2025-04-16 # claude-3-5-sonnet-20241022"
    ]
   },
   {
@@ -57,15 +57,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-04 00:12:53 - INFO - Creating global visualization for 2 checks\n",
-      "2025-08-04 00:12:53 - INFO - Creating plot for prompt: prompt.1...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-08-04 00:12:53 - INFO - Creating plot for prompt: prompt.2...\n"
+      "2025-08-04 10:40:26 - INFO - Creating global visualization for 2 checks\n",
+      "2025-08-04 10:40:26 - INFO - Creating plot for prompt: prompt.1...\n",
+      "2025-08-04 10:40:26 - INFO - Creating plot for prompt: prompt.2...\n"
      ]
     },
     {
@@ -78,8 +72,8 @@
         {
          "error_y": {
           "array": [
-           0.25898232448868314,
-           0.13845283683610765
+           0.13017531574930674,
+           0.11067658405768978
           ],
           "color": "grey",
           "thickness": 1,
@@ -89,8 +83,8 @@
          },
          "hoverinfo": "text",
          "hovertext": [
-          "Check: section-order-alt<br>Average Score: 0.838<br>Prompt: prompt.1<br>Num Points: 5",
-          "Check: section-order<br>Average Score: 0.569<br>Prompt: prompt.1<br>Num Points: 5"
+          "Check: section-order-alt<br>Average Score: 0.920<br>Prompt: prompt.1<br>Num Points: 5",
+          "Check: section-order<br>Average Score: 0.548<br>Prompt: prompt.1<br>Num Points: 5"
          ],
          "marker": {
           "color": "rgb(228,26,28)"
@@ -104,8 +98,8 @@
           0.8333333333333334
          ],
          "y": [
-          0.8384949727691662,
-          0.568711001642036
+          0.9200264788974467,
+          0.5479935485969969
          ]
         },
         {
@@ -135,26 +129,26 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          -0.20542850792780792,
-          -0.12015295526150827,
-          -0.1480841292729239,
-          -0.18863669637771502,
-          -0.13552913359475138,
-          0.8385773778983664,
-          0.8017113437612501,
-          0.7950505531103066,
-          0.8196395827958547,
-          0.8384456320402669
+          -0.17850236958804708,
+          -0.18782252653893367,
+          -0.13831344880046156,
+          -0.16966811585123126,
+          -0.15789715279044522,
+          0.7637937093605267,
+          0.8386761874960446,
+          0.8519008096718012,
+          0.7826275817208934,
+          0.8572140502592219
          ],
          "y": {
-          "bdata": "IO2P9kf76z8AAAAAAADwP0U2IhuRjdg/IhuRjchG7j+gf/7555/vPzMzMzMzM+M/DMMwDMMw5D+HRWHfM8vnP2DxFV/xFd8/iIiIiIiI2D8=",
+          "bdata": "jshGZCOy7T8AAAAAAADwP6iffvrpp+8/JeJ0mLCu7z8srrjiiivmP83MzMzMzOI/I2hEueNe2j8XGrPH9obkP83MzMzMzOQ/RvovLp273D8=",
           "dtype": "f8"
          }
         },
         {
          "error_y": {
           "array": [
-           0.09305337728297215
+           0.28122713789706716
           ],
           "color": "grey",
           "thickness": 1,
@@ -164,7 +158,7 @@
          },
          "hoverinfo": "text",
          "hovertext": [
-          "Check: section-order<br>Average Score: 0.543<br>Prompt: prompt.2<br>Num Points: 5"
+          "Check: section-order<br>Average Score: 0.461<br>Prompt: prompt.2<br>Num Points: 5"
          ],
          "marker": {
           "color": "rgb(55,126,184)"
@@ -177,7 +171,7 @@
           1.1666666666666667
          ],
          "y": [
-          0.5427777485105473
+          0.4610645496347767
          ]
         },
         {
@@ -202,14 +196,14 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          1.1408558930658437,
-          1.174200115885977,
-          1.1314754959686903,
-          1.1915910133710006,
-          1.1360736836705059
+          1.2143481737513357,
+          1.1498290753233065,
+          1.1623076385515132,
+          1.1754461484059673,
+          1.1630116469953997
          ],
          "y": {
-          "bdata": "mpmZmZmZ4T9zcihyzU7gP3XxKCXO/N0/YPEVX/EV3z9mZmZmZmbmPw==",
+          "bdata": "eF3DFSFj5D+Tca400N3kPwAAAAAAAAAAabtUKGhM5D9wWPuGtW/YPw==",
           "dtype": "f8"
          }
         }
@@ -1006,7 +1000,7 @@
          "font": {
           "size": 24
          },
-         "text": "Benchmarking of \"Doc-Checklist\"<br><span style=\"font-size: 0.5em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.5em; color: #888;\">Model: claude-3-5-sonnet-20241022</span>",
+         "text": "Benchmarking of \"Doc-Checklist\"<br><span style=\"font-size: 0.5em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.5em; color: #888;\">Model: claude-sonnet-4-20250514</span>",
          "x": 0.5,
          "y": 0.95
         },
@@ -1057,15 +1051,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-04 00:13:06 - INFO - Creating plot (prompt.1, longest_common_subsequence), plotting score for section-order-alt...\n",
-      "2025-08-04 00:13:06 - INFO - Plotting data: 10 rows\n"
+      "2025-08-04 10:40:34 - INFO - Creating plot (prompt.1, longest_common_subsequence), plotting score for section-order-alt...\n",
+      "2025-08-04 10:40:34 - INFO - Plotting data: 10 rows\n"
      ]
     },
     {
@@ -1102,26 +1096,26 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          -0.012504694264156797,
-          1.0669807050421478,
-          -0.028354545137220882,
-          1.025622522275702,
-          0.07850352960932892,
-          0.990029830428773,
-          0.07134415925743126,
-          1.0343537217773062,
-          0.005239617493149207,
-          0.9849845084467813
+          -0.06470640046372182,
+          1.0226180599482266,
+          0.09342277958580836,
+          1.0602734590224088,
+          -0.02405460148908857,
+          0.9233029839316927,
+          -0.05885153425801043,
+          0.9722437313562998,
+          0.0019629174527440005,
+          0.9498605268951387
          ],
          "y": {
-          "bdata": "QNof7Y/27z8AAAAAAADoPwAAAAAAAPA/AAAAAAAA8D9FNiIbkY3oPwAAAAAAAAAARTYiG5GN7D8AAAAAAADwP0D//PPPP+8/AAAAAAAA8D8=",
+          "bdata": "G5GNyEZk6z8AAAAAAADwPwAAAAAAAPA/AAAAAAAA8D9QP/3000/vPwAAAAAAAPA/SsTpMGFd7z8AAAAAAADwP1dcccUVV+w/AAAAAAAA4D8=",
           "dtype": "f8"
          }
         },
         {
          "error_y": {
           "array": {
-           "bdata": "qkxY6Hq22z+W8vhewX25Pw==",
+           "bdata": "2e2/xSWfzD8po7Z1fYuwPw==",
            "dtype": "f8"
           },
           "color": "grey",
@@ -1131,8 +1125,8 @@
           "width": 3
          },
          "hovertext": [
-          "Field: missing_sections<br>0.75: 0.750<br>Prompt: prompt.1",
-          "Field: sections_as_in_manuscript<br>0.9269899455383326: 0.927<br>Prompt: prompt.1"
+          "Field: missing_sections<br>0.9: 0.900<br>Prompt: prompt.1",
+          "Field: sections_as_in_manuscript<br>0.9400529577948934: 0.940<br>Prompt: prompt.1"
          ],
          "marker": {
           "color": "rgb(228,26,28)"
@@ -1146,7 +1140,7 @@
           0
          ],
          "y": {
-          "bdata": "AAAAAAAA6D/O2nnR5qntPw==",
+          "bdata": "zczMzMzM7D+dlsfw6RTuPw==",
           "dtype": "f8"
          }
         }
@@ -1941,7 +1935,7 @@
          }
         },
         "title": {
-         "text": "score for section-order-alt (n=5)<br><span style=\"font-size: 0.8em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.8em; color: #888;\">Model: claude-3-5-sonnet-20241022</span>"
+         "text": "score for section-order-alt (n=5)<br><span style=\"font-size: 0.8em; color: #888;\">Comparing values with longest common subsequence</span><br><span style=\"font-size: 0.8em; color: #888;\">Model: claude-sonnet-4-20250514</span>"
         },
         "width": 800,
         "xaxis": {
@@ -1988,39 +1982,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.384</h3>\n",
+       "            <h3>Paper: EMM-2025-21532 - Element: EMM-2025-21532/match_0_0 with score 0.693</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.767</td><td>0.846</td></tr><tr><td>missing_sections</td><td>0.000</td><td>0.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.886</td><td>0.952</td></tr><tr><td>missing_sections</td><td>0.500</td><td>0.667</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
        "            \n",
-       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.384</h3>\n",
+       "            <h3>Paper: EMM-2025-21532 - Element: EMM-2025-21532/match_0_0 with score 0.693</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.767</td><td>0.846</td></tr><tr><td>missing_sections</td><td>0.000</td><td>0.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.886</td><td>0.952</td></tr><tr><td>missing_sections</td><td>0.500</td><td>0.667</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
        "            \n",
-       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.384</h3>\n",
+       "            <h3>Paper: EMM-2025-21532 - Element: EMM-2025-21532/match_0_0 with score 0.693</h3>\n",
        "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
        "                \n",
        "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
        "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
-       "                <tr><td>sections_as_in_manuscript</td><td>0.767</td><td>0.846</td></tr><tr><td>missing_sections</td><td>0.000</td><td>0.000</td></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.886</td><td>0.952</td></tr><tr><td>missing_sections</td><td>0.500</td><td>0.667</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.928</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.856</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.928</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.856</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: 10.1038_embor.2009.217 - Element: 10.1038_embor.2009.217/match_0_0 with score 0.928</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.856</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.989</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.978</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.989</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.978</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
+       "            </table>\n",
+       "            \n",
+       "            </div>\n",
+       "            \n",
+       "            <h3>Paper: EMBOR-2025-61250V2 - Element: EMBOR-2025-61250V2/match_0_0 with score 0.989</h3>\n",
+       "            <div style='display:flex; flex-direction:row; align-items:flex-start;'>\n",
+       "                \n",
+       "            <table style='border-collapse: collapse; width: 80%; margin: 20px;'>\n",
+       "                <tr><th>Field</th><th>Score</th><th>F1 Score</th></tr>\n",
+       "                <tr><td>sections_as_in_manuscript</td><td>0.978</td><td>1.000</td></tr><tr><td>missing_sections</td><td>1.000</td><td>1.000</td></tr>\n",
        "            </table>\n",
        "            \n",
        "            </div>\n",
